--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <main>
-        <div class="results">
+        <div id="results">
             
         </div>
         <div id="productimg">
