fixxed minor bugs

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </header>
     <main>
         <div id="results">
+            <ul id="resultsareshownhere">
+
+            </ul>
             
         </div>
         <div id="productimg">
