--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
             <img src="https://via.placeholder.com/200x70" alt="">
         </div>
         <div class="title">
-            <p>Bus Mall</p>
+            <h1>Bus Mall</h1>
         </div>
     </header>
     <main>
         <div id="results">
+           <div><h2>Voting Result</h2></div> 
             <ul id="resultsareshownhere">
 
             </ul>
-            
+
         </div>
         <div id="productimg">
             <img id="leftimage" src="" alt="">
@@ -32,11 +33,12 @@
 
         </div>
     </main>
-    
+
     <footer>
 
     </footer>
     <script src="js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 </body>
 
 </html>
