--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@
             <img id="rightimage" src="" alt="">
 
         </div>
+        <div id="chart">
+            <canvas id="myChart" width="10" height="10"></canvas>
+        </div>
     </main>
 
     <footer>
 
     </footer>
-    <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
